<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Github Pocket</string>

    <!-- Main Activity - Layout See More -->
    <string name="main_see_more_text_default">Buscar mais?</string>
    <string name="main_see_more_text_start">Buscando&#8230;</string>
    <string name="main_see_more_text_end">Encontrado!</string>
    <string name="main_see_more_text_fail">Nada foi encontrado!</string>
    <string name="main_see_more_spinner_description">Spinner para carregar mais dados.</string>

    <!-- Menu Items -->
    <string name="main_menu_item_1">Arranjar</string>
    <string name="main_menu_item_2">Sobre</string>
    <string name="pullrequest_menu_item_1">Atualizar</string>

    <!-- Main Activity - Talk about what is happen -->
    <string name="main_activity_progress_dialog_title">Espere um momento&#8230;</string>
    <string name="main_activity_progress_dialog_subtitle">Buscando informações&#8230;</string>
    <string name="main_pullrequest_activity_toast_title">Dispositivo sem conexão com a internet!</string>
    <string name="main_activity_repository_choose_same">Este repositório já está sendo utilizado</string>

    <!-- Main Activity - Alert Dialog With Option -->
    <string name="main_activity_alert_dialog_title">Sortear repositório por:</string>
    <string name="main_activity_alert_dialog_same_choose">Essa opção já está sendo utilizada</string>

    <!-- About Activity -->
    <string name="about_activity_title">Sobre o APP</string>
    <string name="about_activity_title_paragraph_1">Resumo</string>
    <string name="about_activity_text_1">Este aplicativo tem como objetivo listar todos os repositórios de cada linguagem de programaçāo a partir da API disponibilizada pelo Github. Além disso, é possível visualizar algumas informações do repositório, tais como, descriçāo, criador, quantidade de estrelas e forks, além de todos os pull requests ativos no momento.</string>
    <string name="about_activity_title_paragraph_2">Participações</string>
    <string name="about_activity_text_2">Isabella Czamanski, Desenvolvedora Front-End, criadora do icone deste aplicativo, além de ajudar na construção da interface do aplicativo. Mais informações sobre ela em http://isabellaczamanski.com/</string>
    <string name="about_activity_text_3">Jessica Costa, Estudante de T.I, ajudou na construçāo da interface deste aplicativo.</string>
    <string name="about_activity_text_4">Ryan O\' Mullan, Programador Front e Back End, ajudou na tradução e construção da interface do aplicativo. Mais informações sobre ele em http://ryan.omullan.com/</string>

    <!-- Sort and Languages Array -->
    <string-array name="sort_array">
        <item>Estrelas</item>
        <item>Forks</item>
    </string-array>

    <string-array name="languages_array">
        <item>C</item>
        <item>C#</item>
        <item>C++</item>
        <item>Clojure</item>
        <item>ActionScript</item>
        <item>C</item>
        <item>C#</item>
        <item>C++</item>
        <item>Clojure</item>
        <item>CoffeeScript</item>
        <item>CSS</item>
        <item>Go</item>
        <item>Haskell</item>
        <item>HTML</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>Lua</item>
        <item>Matlab</item>
        <item>Objective-C</item>
        <item>Perl</item>
        <item>PHP</item>
        <item>Python</item>
        <item>R</item>
        <item>Ruby</item>
        <item>Scala</item>
        <item>Shell</item>
        <item>Swift</item>
        <item>TeX</item>
        <item>VimL</item>
    </string-array>
</resources>