<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sp.br.githubpocket.activities.AboutActivity"
    android:layout_marginTop="?attr/actionBarSize"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_activity_title_paragraph_1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#3977b0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_activity_text_1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="#000"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#BABABA"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_activity_title_paragraph_2"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#3977b0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_activity_text_2"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:autoLink="web"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_activity_text_3"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_activity_text_4"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:autoLink="web"
            android:textColor="#000"/>
    </LinearLayout>
</LinearLayout>
